# Dev_Example

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeSettings_beagle.json  CMakeSettings_linux.json  CMakeSettings_win.json  Dev_Example.sln  MyCMake.cmake  MyGlobalImports.cmake  MyInstall.cmake  MyPrecompiledHeader.cmake  README.md  mx93-toolchain.cmake  rpi-toolchain.cmake  toolchain-mx93-win.cmake  toolchain-rpi-win.cmake
ByteContent/: ByteContent.vcxproj  ByteContent.vcxproj.filters
ByteContent/Source/: CmdLineExec.cpp  MainInit.cpp  defExampleDefs.cpp  defExampleDefs.h  exampleMsg.cpp  exampleMsg.h  exampleMsgBase.cpp  exampleMsgBase.h  exampleMsgHelper.cpp  exampleMsgHelper.h
CmdLine/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp
CommonLib/: CMakeLists.txt  cmnPriorities.h  cmnPriorities_linux.cpp  cmnPriorities_win.cpp  procoTcpSettings.cpp  procoUdpParms.cpp  procoUdpParms.h  procoUdpSettings.cpp  someExamParms.cpp  someExamParms.h  someExampleParms.cpp  someExampleParms.h
ConsoleApplication1/: ConsoleApplication1.vcxproj
ExamThread1/: CMakeLists.txt  Main.cpp  MainInit.cpp  someExamTimerThread.cpp  someExamTimerThread.h
ExamThread2/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  someExamQCallThread.cpp  someExamQCallThread.h  someExamTimerThread.cpp  someExamTimerThread.h
ExamThread3/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  someExamQCallThread.cpp  someExamQCallThread.h  someExamTwoThread.h  someExamTwoThread_class.cpp  someExamTwoThread_long.cpp  someExamTwoThread_short.cpp
ExampleThread1/: CMakeLists.txt  MainInit.cpp  someExampleTimerThread.cpp
ExampleThread2/: CMakeLists.txt  CmdLineExec.h  Main.cpp  MainInit.cpp  someExampleQCallThread.cpp  someExampleQCallThread.h  someExampleTimerThread.cpp  someExampleTimerThread.h
ExampleThread3/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  someExampleQCallThread.cpp  someExampleQCallThread.h  someExampleTwoThread.h  someExampleTwoThread_class.cpp  someExampleTwoThread_long.cpp  someExampleTwoThread_short.cpp
Files/: Example_Parms.txt
HelloWorld/: CMakeLists.txt  Main.cpp  stdafx.h
Parms/: Parms.vcxproj  Parms.vcxproj.filters
Parms/Source/: CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  someClass1.cpp  someClass1.h  someExampleParms.cpp  someExampleParms.h
Pointer/: CMakeLists.txt  CmdLineExec.cpp
ProtoTcpClient/: CMakeLists.txt  MainInit.cpp  procoClientThread.cpp
ProtoTcpServer/: CMakeLists.txt  procoServerThread.cpp
ProtoUdp/: CMakeLists.txt  CmdLineExec.cpp  MainInit.cpp  procoNetworkThread.cpp
ProtoUdpMsg/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp
ProtoUdpString/: procoMonitorThread.cpp  procoProcThread.cpp
QCallThread/: CMakeLists.txt  MainInit.cpp  QCallThread.vcxproj  QCallThread.vcxproj.filters  someExampleQCallThread.cpp
QCallThread/Source/: CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  someQCallThread1.h  someTimerThread1.cpp  someTimerThread1.h
Test/: CMakeLists.txt  CmdLineExec.cpp  Test.vcxproj
Test/Source/: CmdLineExec.cpp  Main.cpp  MainInit.cpp
TwoThread/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  TwoThread.vcxproj  TwoThread.vcxproj.filters  someExampleQCallThread.cpp  someExampleQCallThread.h  someExampleTwoThread_class.cpp
TwoThread/Source/: CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  someQCallThread1.cpp  someQCallThread1.h  someTwoThread1.cpp  someTwoThread1.h
zzzMacros/: MyCodeMacros.cmake  MyGlobalImports.cmake  MyInstall.cmake  MyPrecompiledHeader.cmake  MySpecial.cmake
